[gd_scene load_steps=5 format=2]

[ext_resource path="res://actors/player/Player.gd" type="Script" id=1]
[ext_resource path="res://actors/player/PlayerAnimations.tres" type="SpriteFrames" id=2]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 4, 4 )

[sub_resource type="Animation" id=10]
resource_name = "Hurt"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Player" type="KinematicBody2D"]
position = Vector2( 0, -8 )
collision_layer = 2
script = ExtResource( 1 )
friction = 600
acceleration = 600
gravity_multiplier = 300
health = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 9 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="HitCooldown" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hurt = SubResource( 10 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]

[node name="LadderCheck" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -10 )
collide_with_areas = true
collide_with_bodies = false

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 2 )
animation = "Idle"
playing = true

[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="HitCooldown" to="." method="_on_HitCooldown_timeout"]
